iconv2: Add new icon for user profile

--- a/index.html
+++ b/index.html
@@ -341,8 +341,7 @@ It combines warehouse management (WMS), transportation management (TMS), labor m
                         <ul>  
                           <li>
                             # Implemented audit logs for tracking key transactions like picking, packing, and shipping.<br>
-                            # Ensured compliance with client-specific shipping documentation and label generation requirements.<br>
-                            
+                            # Ensured compliance with client-specific shipping documentation and label generation requirements.<br>                            
                           </li>                          
                         </ul>
                         
@@ -361,9 +360,9 @@ It combines warehouse management (WMS), transportation management (TMS), labor m
   <section id="contact">
     <div class="container">
       <h2>Contact Me</h2>
-      <p>Email: <a href="mailto:cholkar.swathi@gmail.com">cholkar.swathi@gmail.com</a></p>
-      <p>LinkedIn: <a href="www.linkedin.com/in/swathi-muthiyam-2ab27415">www.linkedin.com/in/swathi-muthiyam-2ab27415</a></p>
-      <p>GitHub: <a href="https://swathi-muthiyam.github.io/swathicholkar.github.io/#">https://swathi-muthiyam.github.io/swathicholkar.github.io/</a> </p>
+      <p>📧 Email: <a href="mailto:cholkar.swathi@gmail.com">cholkar.swathi@gmail.com</a></p>
+      <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/swathi-muthiyam-2ab27415">https://www.linkedin.com/in/swathi-muthiyam-2ab27415</a></p>
+      <p>🐱 GitHub: <a href="https://swathi-muthiyam.github.io/swathimuthiyam.github.io/">https://swathi-muthiyam.github.io/swathimuthiyam.github.io/</a> </p>
     </div>
   </section>
 
