allow to open the link in other browser

--- a/index.html
+++ b/index.html
@@ -360,9 +360,9 @@ It combines warehouse management (WMS), transportation management (TMS), labor m
   <section id="contact">
     <div class="container">
       <h2>Contact Me</h2>
-      <p>📧 Email: <a href="mailto:cholkar.swathi@gmail.com">cholkar.swathi@gmail.com</a></p>
-      <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/swathi-muthiyam-2ab27415">https://www.linkedin.com/in/swathi-muthiyam-2ab27415</a></p>
-      <p>🐱 GitHub: <a href="https://swathi-muthiyam.github.io/swathimuthiyam.github.io/">https://swathi-muthiyam.github.io/swathimuthiyam.github.io/</a> </p>
+      <p>📧 Email: <a href="mailto:cholkar.swathi@gmail.com" target="_blank">cholkar.swathi@gmail.com</a></p>
+      <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/swathi-muthiyam-2ab27415" target="_blank">https://www.linkedin.com/in/swathi-muthiyam-2ab27415</a></p>
+      <p>🐱 GitHub: <a href="https://swathi-muthiyam.github.io/swathimuthiyam.github.io/" target="_blank">https://swathi-muthiyam.github.io/swathimuthiyam.github.io/</a> </p>
     </div>
   </section>
 
