new portfolio added

--- a/cv.html
+++ b/cv.html
@@ -3,39 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Swathi Muthiyam | Portfolio</title>
-  <link rel="stylesheet" href="style.css"/>
+  <title>Swathi Muthiyam - Technical Specialist</title>
+  <link rel="stylesheet" href="D:\Personal-Dev\GitHub\swathimuthiyam.github.io\stylescv.css" />
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>Swathi Muthiyam</h1>
-      <p>• Technical Specialist • Consultant • Project Co-ordinator • Tech Lead • Tech Support Engineer</p>
-      <nav>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </div>
-  </header>
+  <div class="container">
+    <aside class="sidebar">
+      <div class="profile">
+        <img src="C:\Users\Likhil\Desktop\portfolio\SwathiMuthiyamimage.JPG" alt="Swathi Muthiyam" />
+      </div>
+      <div class="contact">
+        <p><strong>📞</strong> +91-8099135747</p>
+        <p><strong>📧</strong> swathi.muthiyam.cholkar@gmail.com</p>
+        <p><strong>🌐</strong> www.portfolio.com</p>
+        <p><strong>📍</strong> Serilingampally, Hyderabad</p>
+      </div>
+      <div class="education">
+        <h3>Education</h3>
+        <p><strong>Bachelor Degree</strong><br />VTU | 2005 - 2009</p>
+        <!-- <p><strong>Master Degree</strong><br />University of AnyCity | 2016 - 2021</p> -->
+      </div>
+      <div class="skills">
+        <h3>Skill</h3>        
+        <p>Plan & Design ⭐⭐⭐⭐⭐</p>
+        <p>Management ⭐⭐⭐⭐</p>
+        <p>Cloud Technology ⭐⭐⭐⭐</p>
+        <p>Communication ⭐⭐⭐⭐</p>
+      </div>
+    </aside>
 
-  <section id="about">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>Hello, I’m a Technical Specialist with 14+ years of experience in building and scaling enterprise applications, leading cross-functional development teams, and architecting robust systems using Microsoft technologies—especially .NET and cloud platforms.
+    <main class="main-content">
+      <header>
+        <h1>Swathi <span>Muthiyam</span></h1>
+        <h2><p>• Technical Specialist • Consultant • Project Co-ordinator • Lead Engineer • Support Engineer • Technical Manager</p></h2>
+      </header>
 
-I’ve driven large-scale digital transformation initiatives across the automotive, retail, and enterprise software sectors. Whether mentoring developers, leading innovation roadmaps, or collaborating with global stakeholders, I focus on delivering solutions that are not just technically sound, but strategically aligned with business goals.
+      <section class="about">
+        <h3>About</h3>
+        <p>
+          I’m a Technical Specialist with 14+ years of experience in building and scaling enterprise applications, leading cross-functional development teams, and architecting robust systems using Microsoft technologies—especially .NET and cloud platforms. I’ve driven large-scale digital transformation initiatives across the automotive, retail, and enterprise software sectors. Whether mentoring developers, leading innovation roadmaps, or collaborating with global stakeholders, I focus on delivering solutions that are not just technically sound, but strategically aligned with business goals. Passionate about clean architecture, performance optimization, and continuous improvement, I thrive in fast-paced environments where technology and business intersect to create impact..
+        </p>
+      </section>
 
-Passionate about clean architecture, performance optimization, and continuous improvement, I thrive in fast-paced environments where technology and business intersect to create impact..</p>
-    </div>
-  </section>
+      <section class="experienceheader">
+        <h3>Experiences</h3>
+        
+          <!-- <h4>Job Position | 2016 - 2017</h4> -->
+          <!-- <p><strong>Company Name | Any City</strong></p> -->
+          <!-- <ul> -->
+            <!-- <li>Include your title, the company name and location, and your dates of employment.</li> -->
+            <!-- <li>Summarize your responsibilities and achievements.</li> -->
+          <!-- </ul> -->
+        <!-- </div> 
 
-  <section id="projects">
-    <div class="container">
-      <h2>Projects</h2>
+        <div class="job">
+          <h4>Job Position | 2017 - 2018</h4>
+          <p><strong>Company Name | Any City</strong></p>
+          <ul>
+            <li>Include your title, the company name and location, and your dates of employment.</li>
+            <li>Summarize your responsibilities and achievements.</li>
+          </ul>
+        </div>-->
+		<section id="projects">
+    <div class="job">
+      <!-- <h2>Projects</h2> -->
       <ul class="project-list">
         <li>
-          <h3>Service Partner Platform</h3>
+          <h3 class = "experienceheader">Service Partner Platform</h3>
           <p>Lead development of a digital services platform for Bosch service partners.  
               Tech Stack: .NET Core 3.1, Azure IoT Hub, Logic Apps, SQL.</p>
               <!-- Modal -->
@@ -82,7 +116,7 @@ Passionate about clean architecture, performance optimization, and continuous im
           <a href="#" onclick="openModal('bspModal')">View Project</a>
         </li>
         <li>
-          <h3>TRAC 360</h3>
+          <h3 class = "experienceheader">TRAC 360</h3>
           <p>IoT-based real-time tracking system. 
             Tech Stack: .NET Core 3.1, Azure IoT Hub, Logic Apps, SQL.</p>
                   <!-- Modal -->
@@ -124,7 +158,7 @@ Passionate about clean architecture, performance optimization, and continuous im
           <a href="#" onclick="openModal('trac360Modal')">View Project</a>
         </li>
         <li>
-          <h3>GTIL – Auditing Tool</h3>
+          <h3 class = "experienceheader">GTIL – Auditing Tool</h3>
           <p>Business-critical accounting & tax platform.
             Tech Stack: .NET Core, Azure Key Vault, Blob Storage, SQL</p>
             <!-- Modal -->
@@ -192,7 +226,7 @@ Passionate about clean architecture, performance optimization, and continuous im
 
         </li>
         <li>
-          <h3>Connected Cars</h3>
+          <h3 class = "experienceheader">Connected Cars</h3>
           <p>Cloud-based vehicle control system.
 Tech Stack: .NET Core, Azure, IoT, Angular, PowerShell</p>
 <!-- Modal -->
@@ -249,7 +283,7 @@ Tech Stack: .NET Core, Azure, IoT, Angular, PowerShell</p>
         </li>
 
         <li>
-          <h3>Global Newton — Inventory Management tool</h3>
+          <h3 class = "experienceheader">Global Newton — Inventory Management tool</h3>
           <p>Application manages Parts and products management </p>
           <!-- <a href="proj-ford.html" target="_blank">View Project</a> -->
           <!-- Modal -->
@@ -282,14 +316,14 @@ Tech Stack: .NET Core, Azure, IoT, Angular, PowerShell</p>
           <a href="#" onclick="openModal('gnModal')">View Project</a>
         </li>
 <li>
-          <h3>SCALE — Manhattan Associates Product</h3>
+          <h3 class = "experienceheader">SCALE — Supply Chain Product</h3>
           <p>Product maintains supply chain process </p> 
 
 <!-- Modal -->
                   <div id="scaleModal" class="modal">
                     <div class="modal-content">
                       <span class="close" onclick="closeModal('scaleModal')">&times;</span>
-                      <h2>SCALE — Manhattan Associates Product</h2>
+                      <h2>SCALE — Supply Chain Product</h2>
                       <br><p><strong>Description:</strong> SCALE (Supply Chain Architected for Logistics Execution) is a comprehensive, modular warehouse and logistics execution system developed by Manhattan Associates. It is designed to manage and optimize the entire supply chain process, from inbound logistics and warehouse operations to outbound shipping and returns management.
 It combines warehouse management (WMS), transportation management (TMS), labor management, and billing capabilities into a single, scalable platform        </p>
                       <br><p><strong>Role:</strong> Full Stack Developer & Support Engineer</p>
@@ -350,15 +384,9 @@ It combines warehouse management (WMS), transportation management (TMS), labor m
       </ul>
     </div>
   </section>
-
-  <section id="contact">
-    <div class="container">
-      <h2>Contact Me</h2>
-      <p>📧 Email: <a href="mailto:cholkar.swathi@gmail.com" target="_blank">cholkar.swathi@gmail.com</a></p>
-      <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/swathi-muthiyam-2ab27415" target="_blank">https://www.linkedin.com/in/swathi-muthiyam-2ab27415</a></p>
-      <p>🐱 GitHub: <a href="https://swathi-muthiyam.github.io/swathimuthiyam.github.io/" target="_blank">https://swathi-muthiyam.github.io/swathimuthiyam.github.io/</a> </p>
-    </div>
-  </section>
+      </section>
+    </main>
+  </div>
 
   <script>
 function openModal(id) {
