images and css paths modified for hosting

--- a/cv.html
+++ b/cv.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Swathi Muthiyam - Technical Specialist</title>
-  <link rel="stylesheet" href="D:\Personal-Dev\GitHub\swathimuthiyam.github.io\stylescv.css" />
+  <link rel="stylesheet" href="stylescv.css" />
 </head>
 <body>
   <div class="container">
     <aside class="sidebar">
       <div class="profile">
-        <img src="C:\Users\Likhil\Desktop\portfolio\SwathiMuthiyamimage.JPG" alt="Swathi Muthiyam" />
+        <img src=".\SwathiMuthiyamimage.JPG" alt="Swathi Muthiyam" />
       </div>
       <div class="contact">
         <p><strong>📞</strong> +91-8099135747</p>
