--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,7 @@
       <div class="contact">
         <p><strong>📞</strong> +91-8099135747</p>
         <p><strong>📧</strong> swathi.muthiyam.cholkar@gmail.com</p>
-        <p><strong>🌐</strong> www.portfolio.com</p>
+        <p><strong>🌐</strong> https://swathi-muthiyam.github.io/portfolio/cv.html#</p>
         <p><strong>📍</strong> Serilingampally, Hyderabad</p>
       </div>
       <div class="education">
@@ -26,9 +26,14 @@
       <div class="skills">
         <h3>Skill</h3>        
         <p>Plan & Design ⭐⭐⭐⭐⭐</p>
-        <p>Management ⭐⭐⭐⭐</p>
+        <p>Project Management ⭐⭐⭐⭐</p>
         <p>Cloud Technology ⭐⭐⭐⭐</p>
         <p>Communication ⭐⭐⭐⭐</p>
+        <p>Problem Solving	⭐⭐⭐⭐⭐</p>
+        <p>Team Collaboration	⭐⭐⭐⭐</p>
+        <p>Agile/Scrum	⭐⭐⭐⭐</p>
+        <p>Time Management	⭐⭐⭐⭐</p>
+        <p>Mentoring / Leadership	⭐⭐⭐</p>
       </div>
     </aside>
 
