--- a/cv.html
+++ b/cv.html
@@ -24,16 +24,20 @@
         <!-- <p><strong>Master Degree</strong><br />University of AnyCity | 2016 - 2021</p> -->
       </div>
       <div class="skills">
-        <h3>Skill</h3>        
+        <h3>Skill</h3>     
+        <p>Backend Development ⭐⭐⭐⭐⭐</p>   
+        <p>Problem Solving	⭐⭐⭐⭐⭐</p>
         <p>Plan & Design ⭐⭐⭐⭐⭐</p>
         <p>Project Management ⭐⭐⭐⭐</p>
         <p>Cloud Technology ⭐⭐⭐⭐</p>
-        <p>Communication ⭐⭐⭐⭐</p>
-        <p>Problem Solving	⭐⭐⭐⭐⭐</p>
+        <p>Communication ⭐⭐⭐⭐</p>        
         <p>Team Collaboration	⭐⭐⭐⭐</p>
         <p>Agile/Scrum	⭐⭐⭐⭐</p>
         <p>Time Management	⭐⭐⭐⭐</p>
-        <p>Mentoring / Leadership	⭐⭐⭐</p>
+        <p>Mentoring / Leadership	⭐⭐⭐⭐</p>        
+        <p>Technical Documentation	⭐⭐⭐⭐</p>        
+        <p>AI Technology	⭐⭐⭐</p>
+        <p>Task Delegation	⭐⭐⭐</p>
       </div>
     </aside>
 
