--- a/cv.html
+++ b/cv.html
@@ -43,14 +43,14 @@
 
     <main class="main-content">
       <header>
-        <h1>Swathi <span>Muthiyam</span></h1>
-        <h2><p>• Technical Specialist • Consultant • Project Co-ordinator • Lead Engineer • Support Engineer • Technical Manager</p></h2>
+        <h1><span>Swathi Muthiyam</span></h1>
+        <h2><p>Technical Manager | Technical Specialist | Consultant | Project Co-ordinator | Lead Engineer | Support Engineer </p></h2>
       </header>
 
       <section class="about">
-        <h3>About</h3>
+        <h3 class="experienceheader">About</h3>
         <p>
-          I’m a Technical Specialist with 14+ years of experience in building and scaling enterprise applications, leading cross-functional development teams, and architecting robust systems using Microsoft technologies—especially .NET and cloud platforms. I’ve driven large-scale digital transformation initiatives across the automotive, retail, and enterprise software sectors. Whether mentoring developers, leading innovation roadmaps, or collaborating with global stakeholders, I focus on delivering solutions that are not just technically sound, but strategically aligned with business goals. Passionate about clean architecture, performance optimization, and continuous improvement, I thrive in fast-paced environments where technology and business intersect to create impact..
+          I’m a Technical Specialist with 14+ years of experience in building and scaling enterprise applications, leading cross-functional development teams, and architecting robust systems using Microsoft technologies - especially .NET and cloud platforms. I’ve driven large-scale digital transformation initiatives across the automotive, retail, and enterprise software sectors. Whether mentoring developers, leading innovation roadmaps, or collaborating with global stakeholders, I focus on delivering solutions that are not just technically sound, but strategically aligned with business goals. Passionate about clean architecture, performance optimization, and continuous improvement, I thrive in fast-paced environments where technology and business intersect to create impact..
         </p>
       </section>
 
