enhance project description for Supply Chain management

--- a/cv.html
+++ b/cv.html
@@ -326,7 +326,7 @@ Tech Stack: .NET Core, Azure, IoT, Angular, PowerShell</p>
         </li>
 <li>
           <h3 class = "experienceheader">SCALE — Supply Chain Product</h3>
-          <p>Product maintains supply chain process </p> 
+          <p>Supply Chain management Product maintains end to end supply chain process Receiving , Order Management, Inventory management, Picking & Packing, Replishment management, Shipping ... so on </p> 
 
 <!-- Modal -->
                   <div id="scaleModal" class="modal">
