to align with Appilicant tacking tool

--- a/cv.html
+++ b/cv.html
@@ -20,24 +20,24 @@
       </div>
       <div class="education">
         <h3>Education</h3>
-        <p><strong>Bachelor Degree</strong><br />VTU | 2005 - 2009</p>
+        <p><strong>Bachelor Degree(ECE)</strong><br />VTU | 2005 - 2009</p>
         <!-- <p><strong>Master Degree</strong><br />University of AnyCity | 2016 - 2021</p> -->
       </div>
       <div class="skills">
         <h3>Skill</h3>     
-        <p>Backend Development ⭐⭐⭐⭐⭐</p>   
-        <p>Problem Solving	⭐⭐⭐⭐⭐</p>
-        <p>Plan & Design ⭐⭐⭐⭐⭐</p>
-        <p>Project Management ⭐⭐⭐⭐</p>
-        <p>Cloud Technology ⭐⭐⭐⭐</p>
-        <p>Communication ⭐⭐⭐⭐</p>        
-        <p>Team Collaboration	⭐⭐⭐⭐</p>
-        <p>Agile/Scrum	⭐⭐⭐⭐</p>
-        <p>Time Management	⭐⭐⭐⭐</p>
-        <p>Mentoring / Leadership	⭐⭐⭐⭐</p>        
-        <p>Technical Documentation	⭐⭐⭐⭐</p>        
-        <p>AI Technology	⭐⭐⭐</p>
-        <p>Task Delegation	⭐⭐⭐</p>
+        <p>Backend Development </p>  <!-- ⭐⭐⭐⭐⭐  -->
+        <p>Problem Solving	</p> <!-- ⭐⭐⭐⭐⭐ -->
+        <p>Plan & Design </p> <!-- ⭐⭐⭐⭐⭐ -->
+        <p>Project Management </p> <!-- ⭐⭐⭐⭐ -->
+        <p>Cloud Technology </p> <!-- ⭐⭐⭐⭐ -->
+        <p>Communication </p>      <!-- ⭐⭐⭐⭐  --> 
+        <p>Team Collaboration	</p> <!-- ⭐⭐⭐⭐ -->
+        <p>Agile/Scrum	</p> <!-- ⭐⭐⭐⭐ -->
+        <p>Time Management	</p> <!-- ⭐⭐⭐⭐ -->
+        <p>Mentoring / Leadership	</p>    <!--⭐⭐⭐⭐   --> 
+        <p>Technical Documentation	</p>  <!-- ⭐⭐⭐⭐  -->   
+        <p>AI Technology	</p> <!-- ⭐⭐⭐ -->
+        <p>Task Delegation	</p> <!-- ⭐⭐⭐ -->
       </div>
     </aside>
 
@@ -122,7 +122,7 @@
                     </div>
                   </div>
           <!-- <a href="proj-bsp.html" target="_blank">View Project</a> -->
-          <a href="#" onclick="openModal('bspModal')">View Project</a>
+          <!-- <a href="#" onclick="openModal('bspModal')">View Project</a> -->
         </li>
         <li>
           <h3 class = "experienceheader">TRAC 360</h3>
@@ -164,7 +164,7 @@
                     </div>
                   </div>
           <!-- <a href="proj-trac360.html" target="_blank">View Project</a> -->
-          <a href="#" onclick="openModal('trac360Modal')">View Project</a>
+          <!-- <a href="#" onclick="openModal('trac360Modal')">View Project</a> -->
         </li>
         <li>
           <h3 class = "experienceheader">GTIL – Auditing Tool</h3>
@@ -204,7 +204,7 @@
                         <li><p> Built-in risk analysis tools to identify high-risk areas..</p> </li>
                         <li><p> Supports materiality calculations and risk matrices..</p> </li>
                         <li><p> Configurable audit planning templates and checklists.</p> </li>
-                        
+
                         <br> <p><strong>Workpaper Management:</strong> </p><br>
                         <li><p> Digital workpapers with review/approval workflows..</p> </li>
                         <li><p> Cross-referencing, annotations, and reviewer comments..</p> </li>
@@ -231,7 +231,7 @@
                     </div>
                   </div>
           <!-- <a href="proj-gtil.html" target="_blank">View Project</a> -->
-          <a href="#" onclick="openModal('gtilModal')">View Project</a>
+          <!-- <a href="#" onclick="openModal('gtilModal')">View Project</a> -->
 
         </li>
         <li>
@@ -288,13 +288,12 @@ Tech Stack: .NET Core, Azure, IoT, Angular, PowerShell</p>
                     </div>
                   </div>
           <!-- <a href="proj-ford.html" target="_blank">View Project</a> -->
-          <a href="#" onclick="openModal('fordModal')">View Project</a>
+          <!-- <a href="#" onclick="openModal('fordModal')">View Project</a> -->
         </li>
 
         <li>
           <h3 class = "experienceheader">Global Newton — Inventory Management tool</h3>
           <p>Application manages Parts and products management </p>
-          <!-- <a href="proj-ford.html" target="_blank">View Project</a> -->
           <!-- Modal -->
                   <div id="gnModal" class="modal">
                     <div class="modal-content">
@@ -322,7 +321,8 @@ Tech Stack: .NET Core, Azure, IoT, Angular, PowerShell</p>
                         </ul>
                     </div>
                   </div>
-          <a href="#" onclick="openModal('gnModal')">View Project</a>
+          <!-- <a href="proj-ford.html" target="_blank">View Project</a> -->
+          <!-- <a href="#" onclick="openModal('gnModal')">View Project</a> -->
         </li>
 <li>
           <h3 class = "experienceheader">SCALE — Supply Chain Product</h3>
@@ -387,7 +387,7 @@ It combines warehouse management (WMS), transportation management (TMS), labor m
                   </div>
 
           <!-- <a href="proj-ford.html" target="_blank">View Project</a> -->
-          <a href="#" onclick="openModal('scaleModal')">View Project</a>
+          <!-- <a href="#" onclick="openModal('scaleModal')">View Project</a> -->
         </li>
         
       </ul>
@@ -397,6 +397,9 @@ It combines warehouse management (WMS), transportation management (TMS), labor m
     </main>
   </div>
 
+  <button id="downloadPdfBtn" style="position:fixed;bottom:30px;right:30px;z-index:9999;padding:12px 24px;background:#007bff;color:#fff;border:none;border-radius:6px;cursor:pointer;font-size:16px;">Download PDF</button>
+
+  <script src="https://unpkg.com/html2pdf.js@0.10.1/dist/html2pdf.bundle.min.js"></script>
   <script>
 function openModal(id) {
   document.getElementById(id).style.display = 'block';
@@ -415,6 +418,46 @@ window.onclick = function(event) {
     }
   });
 }
+
+// PDF Download logic
+const downloadBtn = document.getElementById('downloadPdfBtn');
+// Add loading indicator
+const loadingDiv = document.createElement('div');
+loadingDiv.id = 'pdfLoading';
+loadingDiv.style = 'position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:#fff;padding:20px 40px;border-radius:8px;box-shadow:0 2px 8px #0002;font-size:18px;z-index:99999;display:none;';
+loadingDiv.innerText = 'Generating PDF, please wait...';
+document.body.appendChild(loadingDiv);
+
+downloadBtn.addEventListener('click', function() {
+  document.querySelectorAll('.modal').forEach(m => m.style.display = 'none');
+  downloadBtn.style.display = 'none';
+  loadingDiv.style.display = 'block';
+
+  // Try exporting the full container first
+  const container = document.querySelector('.container');
+  const opt = {
+    margin:       0.5,
+    filename:     'Swathi_Muthiyam_CV.pdf',
+    image:        { type: 'jpeg', quality: 0.98 },
+    html2canvas:  { scale: 2, useCORS: true },
+    jsPDF:        { unit: 'in', format: 'a4', orientation: 'portrait' }
+  };
+  html2pdf().set(opt).from(container).save().then(() => {
+    downloadBtn.style.display = '';
+    loadingDiv.style.display = 'none';
+  }).catch(err => {
+    // Fallback: try exporting only main content
+    const mainContent = document.querySelector('.main-content');
+    html2pdf().set(opt).from(mainContent).save().then(() => {
+      downloadBtn.style.display = '';
+      loadingDiv.style.display = 'none';
+    }).catch(err2 => {
+      alert('PDF download failed. Please check your browser settings, image paths, or try again.');
+      downloadBtn.style.display = '';
+      loadingDiv.style.display = 'none';
+    });
+  });
+});
 </script>
 
 </body>
