comment , added linked in

--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,8 @@
       <div class="contact">
         <p><strong>📞</strong> +91-8099135747</p>
         <p><strong>📧</strong> swathi.muthiyam.cholkar@gmail.com</p>
-        <p><strong>🌐</strong> https://swathi-muthiyam.github.io/portfolio/cv.html#</p>
+        <p><strong>🌐</strong> <a href="https://swathi-muthiyam.github.io/portfolio/cv.html#" target="_blank">Portfolio</a></p>
+        <p><strong>🌐</strong> <a href="www.linkedin.com/in/swathi-muthiyam-2ab27415" target="_blank">linkedin</a></p> 
         <p><strong>📍</strong> Serilingampally, Hyderabad</p>
       </div>
       <div class="education">
@@ -56,7 +57,7 @@
 
       <section class="experienceheader">
         <h3>Experiences</h3>
-        
+           
           <!-- <h4>Job Position | 2016 - 2017</h4> -->
           <!-- <p><strong>Company Name | Any City</strong></p> -->
           <!-- <ul> -->
@@ -397,7 +398,7 @@ It combines warehouse management (WMS), transportation management (TMS), labor m
     </main>
   </div>
 
-  <button id="downloadPdfBtn" style="position:fixed;bottom:30px;right:30px;z-index:9999;padding:12px 24px;background:#007bff;color:#fff;border:none;border-radius:6px;cursor:pointer;font-size:16px;">Download PDF</button>
+  <!-- <button id="downloadPdfBtn" style="position:fixed;bottom:30px;right:30px;z-index:9999;padding:12px 24px;background:#007bff;color:#fff;border:none;border-radius:6px;cursor:pointer;font-size:16px;">Download PDF</button> -->
 
   <script src="https://unpkg.com/html2pdf.js@0.10.1/dist/html2pdf.bundle.min.js"></script>
   <script>
