--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,7 @@
         <p><strong>📞</strong> +91-8099135747</p>
         <p><strong>📧</strong> swathi.muthiyam.cholkar@gmail.com</p>
         <p><strong>🌐</strong> <a href="https://swathi-muthiyam.github.io/portfolio/cv.html#" target="_blank">Portfolio</a></p>
-        <p><strong>🌐</strong> <a href="www.linkedin.com/in/swathi-muthiyam-2ab27415" target="_blank">linkedin</a></p> 
+        <p><strong>🔗</strong> <a href="www.linkedin.com/in/swathi-muthiyam-2ab27415" target="_blank">linkedin</a></p> 
         <p><strong>📍</strong> Serilingampally, Hyderabad</p>
       </div>
       <div class="education">
