--- a/cv.html
+++ b/cv.html
@@ -15,9 +15,10 @@
       <div class="contact">
         <p><strong>📞</strong> +91-8099135747</p>
         <p><strong>📧</strong> swathi.muthiyam.cholkar@gmail.com</p>
+        <p><strong>📍</strong> Serilingampally, Hyderabad</p>
         <p><strong>🌐</strong> <a href="https://swathi-muthiyam.github.io/portfolio/cv.html#" target="_blank">Portfolio</a></p>
         <p><strong>🔗</strong> <a href="www.linkedin.com/in/swathi-muthiyam-2ab27415" target="_blank">linkedin</a></p> 
-        <p><strong>📍</strong> Serilingampally, Hyderabad</p>
+        
       </div>
       <div class="education">
         <h3>Education</h3>
@@ -123,7 +124,7 @@
                     </div>
                   </div>
           <!-- <a href="proj-bsp.html" target="_blank">View Project</a> -->
-          <!-- <a href="#" onclick="openModal('bspModal')">View Project</a> -->
+          <a href="#" onclick="openModal('bspModal')">View Project</a>
         </li>
         <li>
           <h3 class = "experienceheader">TRAC 360</h3>
@@ -165,7 +166,7 @@
                     </div>
                   </div>
           <!-- <a href="proj-trac360.html" target="_blank">View Project</a> -->
-          <!-- <a href="#" onclick="openModal('trac360Modal')">View Project</a> -->
+          <a href="#" onclick="openModal('trac360Modal')">View Project</a>
         </li>
         <li>
           <h3 class = "experienceheader">GTIL – Auditing Tool</h3>
@@ -232,7 +233,7 @@
                     </div>
                   </div>
           <!-- <a href="proj-gtil.html" target="_blank">View Project</a> -->
-          <!-- <a href="#" onclick="openModal('gtilModal')">View Project</a> -->
+          <a href="#" onclick="openModal('gtilModal')">View Project</a>
 
         </li>
         <li>
@@ -289,7 +290,7 @@ Tech Stack: .NET Core, Azure, IoT, Angular, PowerShell</p>
                     </div>
                   </div>
           <!-- <a href="proj-ford.html" target="_blank">View Project</a> -->
-          <!-- <a href="#" onclick="openModal('fordModal')">View Project</a> -->
+          <a href="#" onclick="openModal('fordModal')">View Project</a>
         </li>
 
         <li>
@@ -323,7 +324,7 @@ Tech Stack: .NET Core, Azure, IoT, Angular, PowerShell</p>
                     </div>
                   </div>
           <!-- <a href="proj-ford.html" target="_blank">View Project</a> -->
-          <!-- <a href="#" onclick="openModal('gnModal')">View Project</a> -->
+          <a href="#" onclick="openModal('gnModal')">View Project</a>
         </li>
 <li>
           <h3 class = "experienceheader">SCALE — Supply Chain Product</h3>
@@ -388,7 +389,7 @@ It combines warehouse management (WMS), transportation management (TMS), labor m
                   </div>
 
           <!-- <a href="proj-ford.html" target="_blank">View Project</a> -->
-          <!-- <a href="#" onclick="openModal('scaleModal')">View Project</a> -->
+          <a href="#" onclick="openModal('scaleModal')">View Project</a>
         </li>
         
       </ul>
@@ -400,7 +401,7 @@ It combines warehouse management (WMS), transportation management (TMS), labor m
 
   <!-- <button id="downloadPdfBtn" style="position:fixed;bottom:30px;right:30px;z-index:9999;padding:12px 24px;background:#007bff;color:#fff;border:none;border-radius:6px;cursor:pointer;font-size:16px;">Download PDF</button> -->
 
-  <script src="https://unpkg.com/html2pdf.js@0.10.1/dist/html2pdf.bundle.min.js"></script>
+  <!-- <script src="https://unpkg.com/html2pdf.js@0.10.1/dist/html2pdf.bundle.min.js"></script> -->
   <script>
 function openModal(id) {
   document.getElementById(id).style.display = 'block';
