--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="container">
       <h1>Swathi Muthiyam</h1>
-      <p>• Technical Specialist • Consultant • Project Co-ordinator • Lead Engineer • Support Engineer</p>
+      <p>• Engineering Manager • Technical Specialist • Consultant • Project Co-ordinator • Lead Engineer • Support Engineer</p>
       <nav>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
