Project Name edit

--- a/index.html
+++ b/index.html
@@ -282,14 +282,14 @@ Tech Stack: .NET Core, Azure, IoT, Angular, PowerShell</p>
           <a href="#" onclick="openModal('gnModal')">View Project</a>
         </li>
 <li>
-          <h3>SCALE — Manhattan Associates Product</h3>
+          <h3>SCALE — Supply Chain Product</h3>
           <p>Product maintains supply chain process </p> 
 
 <!-- Modal -->
                   <div id="scaleModal" class="modal">
                     <div class="modal-content">
                       <span class="close" onclick="closeModal('scaleModal')">&times;</span>
-                      <h2>SCALE — Manhattan Associates Product</h2>
+                      <h2>SCALE — Supply Chain Product</h2>
                       <br><p><strong>Description:</strong> SCALE (Supply Chain Architected for Logistics Execution) is a comprehensive, modular warehouse and logistics execution system developed by Manhattan Associates. It is designed to manage and optimize the entire supply chain process, from inbound logistics and warehouse operations to outbound shipping and returns management.
 It combines warehouse management (WMS), transportation management (TMS), labor management, and billing capabilities into a single, scalable platform        </p>
                       <br><p><strong>Role:</strong> Full Stack Developer & Support Engineer</p>
