--- a/cv.html
+++ b/cv.html
@@ -13,8 +13,8 @@
         <img src=".\SwathiMuthiyamimage.JPG" alt="Swathi Muthiyam" />
       </div>
       <div class="contact">
-        <p><strong>📞</strong> +91-8099135747</p>
-        <p><strong>📧</strong> swathi.muthiyam.cholkar@gmail.com</p>
+        <p><strong>📞</strong> +91-8919907825</p>
+        <p><strong>📧</strong> swathi0408@gmail.com</p>
         <p><strong>📍</strong> Serilingampally, Hyderabad</p>
         <p><strong>🌐</strong> <a href="https://swathi-muthiyam.github.io/portfolio/cv.html#" target="_blank">Portfolio</a></p>
         <p><strong>🔗</strong> <a href="https://www.linkedin.com/in/swathi-muthiyam-2ab27415" target="_blank">linkedin</a></p> 
